--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-text">
-                        <h2>Ko smo mi?</h2>
-                        <p class="first-para">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean pretium sollicitudin, nascetur auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a amet.</p>
-                        <p class="second-para">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, gravida quam semper libero sit amet. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, gravida quam semper libero sit amet.</p>
+                        <h2>Želiš da započneš transformaciju? Onda si na pravom mestu! </h2>
+                        <p class="first-para">Mi smo tim sa kojima postaješ i ostaješ fit. Biti fit je mnogo više od samog izgleda. Zato nam se priključi, jer to se ne dobija to se osvaja!</p>
+                        <p class="second-para">Uz nas ćete shvatiti zašto je bitno trenirati, a tu je i nauka da Vam kaže 6 razloga za to. Imaćete bolju koncentraciju, živećete duže, živećete zdravije, imaćete više energije, imaćete više samopouzdanja i imaćete bolje pamćenje.
+                            Zato nemojte čekati, prijavite se i započnite sa treningom već od sutra!</p>
                         <a href="#" class="primary-btn">T FIT FITNESS</a>
                     </div>
                 </div>
@@ -111,13 +112,13 @@
                                 <div class="services-item bg-gray">
                                     <img src="img/services/service-icon-1.png" alt="">
                                     <h4>Cilj</h4>
-                                    <p>Aenean massa. Cum sociis Theme et natoque penatibus et magnis dis part urient montes.
+                                    <p>Cilj ovakvog procesa je optimalni nivo prilagođenosti svih osobina, sposobnosti i karakteristika od kojih zavisi željeni, ali realno moguć, unapred planirani rezultat..
                                     </p>
                                 </div>
                                 <div class="services-item bg-gray pd-b">
                                     <img src="img/services/service-icon-3.png" alt="">
                                     <h4>Zdravlje</h4>
-                                    <p>Aenean massa. Cum sociis Theme et natoque penatibus et magnis dis part urient montes.
+                                    <p>Vežbanje ne mora da bude noćna mora koju "moramo" da radimo svaki dan. Samo izdvojite pola sata svog vremena i to će biti sasvim dovoljno da održite lep izgled ali i zdravlje.
                                     </p>
                                 </div>
                             </div>
@@ -125,13 +126,13 @@
                                 <div class="services-item">
                                     <img src="img/services/service-icon-2.png" alt="">
                                     <h4>Snaga</h4>
-                                    <p>Aenean massa. Cum sociis Theme et natoque penatibus et magnis dis part urient montes.
+                                    <p>Da li je razvoj snage zaista toliko važan? <br>Kratko i jasno: Da! Snaga poboljšava sve ostale fizičke sposobnosti i ona je osnov za sve ljudske i atletske pokrete.
                                     </p>
                                 </div>
                                 <div class="services-item pd-b">
                                     <img src="img/services/service-icon-4.png" alt="">
                                     <h4>Mrsavljenje</h4>
-                                    <p>Aenean massa. Cum sociis Theme et natoque penatibus et magnis dis part urient montes.
+                                    <p>Najbolji trening za mršavljenje uključuje sveobuhvatnu rutinu vežbanja – sa kardio i treninzima snage – i naravno zdravom ishranom. Zato je pred tobom najbolji trening za mršvljenje koji možeš da uradiš!
                                     </p>
                                 </div>
                             </div>
@@ -155,44 +156,44 @@
             </div>
             <div class="row classes-slider owl-carousel">
                 <div class="col-lg-4">
-                    <div class="single-class-item set-bg" data-setbg="img/classes/classes-1.jpg">
+                    <div class="single-class-item set-bg" data-setbg="img/classes/individualni.jpg">
                         <div class="si-text">
                             <h4>Individualni treninzi</h4>
-                            <span><i class="fa fa-user"></i> Ryan Knight</span>
+                            <span><i class="fa fa-user"></i> Miloš Todorović</span>
                         </div>
                     </div>
-                    <div class="single-class-item set-bg" data-setbg="img/classes/classes-4.jpg">
+                    <div class="single-class-item set-bg" data-setbg="img/classes/mrsavljenje.jpg">
                         <div class="si-text">
                             <h4>Mrsavljenje</h4>
-                            <span><i class="fa fa-user"></i> Kevin McCormick</span>
+                            <span><i class="fa fa-user"></i> Miloš Todorović</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="single-class-item set-bg" data-setbg="img/classes/classes-2.jpg">
+                    <div class="single-class-item set-bg" data-setbg="img/classes/hipertrofija.jpg">
                         <div class="si-text">
                             <h4>Trening hipertrofije</h4>
-                            <span><i class="fa fa-user"></i> Randy Rivera</span>
+                            <span><i class="fa fa-user"></i> Miloš Todorović</span>
                         </div>
                     </div>
                     <div class="single-class-item set-bg" data-setbg="img/classes/classes-5.jpg">
                         <div class="si-text">
                             <h4>Plan treninga</h4>
-                            <span><i class="fa fa-user"></i> Russell Lane</span>
+                            <span><i class="fa fa-user"></i> Miloš Todorović</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="single-class-item set-bg" data-setbg="img/classes/classes-3.jpg">
+                    <div class="single-class-item set-bg" data-setbg="img/classes/personalnitrening.jpg">
                         <div class="si-text">
                             <h4>Personalni trening</h4>
-                            <span><i class="fa fa-user"></i> Cole Robertson</span>
+                            <span><i class="fa fa-user"></i> Miloš Todorović</span>
                         </div>
                     </div>
-                    <div class="single-class-item set-bg" data-setbg="img/classes/classes-6.jpg">
+                    <div class="single-class-item set-bg" data-setbg="img/classes/planishrane.jpg">
                         <div class="si-text">
                             <h4>Plan ishrane</h4>
-                            <span><i class="fa fa-user"></i> Ryan Scott</span>
+                            <span><i class="fa fa-user"></i> Miloš Todorović</span>
                         </div>
                     </div>
                 </div>
@@ -240,15 +241,15 @@
                     <div class="single-trainer-item">
                         <img src="img/trainer/about-trainer-2.jpg" alt="">
                         <div class="trainer-text">
-                            <h5>Gregory Powers</h5>
-                            <span>Gym coach</span>
+                            <h5>Miloš Todorović</h5>
+                            <span>Trener</span>
                             <p>non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
                             </p>
                             <div class="trainer-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-instagram"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
+
                             </div>
                         </div>
                     </div>
@@ -281,7 +282,7 @@
                 <div class="col-lg-6">
                     <div class="banner-text">
                         <h2>Krenite već danas</h2>
-                        <p>Gimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard.</p>
+                        <p>Personalni trening se zasniva na tzv. jedan na jedan programu (jedan vežbač - jedan personalni trener). U toj situaciji personalni trener je u savršenoj poziciji da prati napredak, ispravlja greške, motiviše i predvodi ceo trening.</p>
                         <a href="#" class="primary-btn banner-btn">Kontakt</a>
                     </div>
                 </div>
@@ -310,22 +311,22 @@
                             <h4>Osnovni</h4>
                             <div class="triangle"></div>
                         </div>
-                        <h2 class="mi-price">$17<span>/01 mo</span></h2>
+                        <h2 class="mi-price">$17<span>/1 mesec</span></h2>
                         <ul>
                             <li>
-                                <p>Duration</p>
-                                <span>12 months</span>
+                                <p>Trajenje</p>
+                                <span>1 mesec</span>
                             </li>
                             <li>
-                                <p>Personal trainer</p>
-                                <span>00 person</span>
+                                <p>Personalni trener</p>
+                                <span>Miloš Todorović</span>
                             </li>
                             <li>
-                                <p>Amount of people</p>
-                                <span>01 person</span>
+                                <p>Klijenti</p>
+                                <span>1 </span>
                             </li>
                             <li>
-                                <p>Number of visits</p>
+                                <p>Broj treninga nedeljno</p>
                                 <span>Unlimited</span>
                             </li>
                         </ul>
@@ -338,22 +339,22 @@
                             <h4>Standardni</h4>
                             <div class="triangle"></div>
                         </div>
-                        <h2 class="mi-price">$57<span>/01 mo</span></h2>
+                        <h2 class="mi-price">$57<span>/1 mesec</span></h2>
                         <ul>
                             <li>
-                                <p>Duration</p>
-                                <span>12 months</span>
+                                <p>Trajenje</p>
+                                <span>1 mesec</span>
                             </li>
                             <li>
-                                <p>Personal trainer</p>
-                                <span>01 person</span>
+                                <p>Personalni trener</p>
+                                <span>Miloš Todorović</span>
                             </li>
                             <li>
-                                <p>Amount of people</p>
-                                <span>01 person</span>
+                                <p>Klijenti</p>
+                                <span>1 </span>
                             </li>
                             <li>
-                                <p>Number of visits</p>
+                                <p>Broj treninga nedeljno</p>
                                 <span>Unlimited</span>
                             </li>
                         </ul>
@@ -366,22 +367,22 @@
                             <h4>Premium</h4>
                             <div class="triangle"></div>
                         </div>
-                        <h2 class="mi-price">$98<span>/01 mo</span></h2>
+                        <h2 class="mi-price">$98<span>/1 mesec</span></h2>
                         <ul>
                             <li>
-                                <p>Duration</p>
-                                <span>12 months</span>
+                                <p>Trajenje</p>
+                                <span>1 mesec</span>
                             </li>
                             <li>
-                                <p>Personal trainer</p>
-                                <span>01 person</span>
+                                <p>Personalni trener</p>
+                                <span>Miloš Todorović</span>
                             </li>
                             <li>
-                                <p>Amount of people</p>
-                                <span>01 person</span>
+                                <p>Klijenti</p>
+                                <span>1 </span>
                             </li>
                             <li>
-                                <p>Number of visits</p>
+                                <p>Broj treninga nedeljno</p>
                                 <span>Unlimited</span>
                             </li>
                         </ul>
@@ -511,7 +512,7 @@
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
+
                 </div>
             </div>
         </div>
